--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-    <h1 class="text-danger">
-        Мое портфолио
-    </h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style type="text/css">
+      .block{
+        width: 300px;
+        height: 300px;
+        margin-left: 50px;
+        margin-top: 50px;
+        background: orange;
+      }
+
+      .block:hover{
+        width: 400px;
+        height: 400px;
+        background: red;
+        border-radius: 170px;
+        transition: width 1s linear, height 1s linear, background 1s linear, border-radius 1s linear
+      }
+    </style>
+  </head>
+  <body>
+    <div class="block"> 
+    </div>
+  </body>
 </html>
